-bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
-bug#0001600: Default action on lists should be "None"
-bug#0002232: poller_graphs_reapply_names.php requires -id=All when -id=all should work also
-bug#0002237: Issue with filtering '/' on "Create Graphs for this Host" page
-bug#0002250: Bug when creating a data source, broken stub remains
-bug#0002264: Association spelt incorrectly
-bug#0002266: Against spelt incorrectly
-bug#0002280: meta http-equiv=refresh content in lib/graph_export.php contains to many apostrophes (more findings apply)
-bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
-bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
-bug: allow empty [upper|lower]_limit even without autoscaling
-bug: correct grep'ing of icmp[s|r]eq required for newer linux versions (e.g. Fedora 14)
-feature#0000475: Add RRDTool options currently not settable within Cacti
-feature#0000726: add VDEF support
-feature#0000954: implement --alt-y-grid graph option
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0001111: add remove-device.php cli script, replace numerical constants for permission handling by PERM_*
-feature#0001185: Mass enable/disable graph export per graph from Graph Management
-feature#0001343: Add TEXTALIGN functionality to graph templates
-feature#0001371: Support for LINE:STACK, was: Stacked LINE
-feature#0001418: changing the graph backround via graph templates
-feature#0001438: Allow for drag and drop reordering of graph template items
-feature#0001450: Template import script
-feature#0001457: Support for rrdtool graph options, was: Extra settings field in graph template
-feature#0001525: add rebuild_poller_cache --host-id=[ID]
-feature#0001536: small patch to allow plugins to change the x-axis labels
-feature#0001550: Record the polling time for each host to optimize polling times